Update Refresh token, token

--- a/BE/WebTicket/WebTicket/appsettings.Production.json
+++ b/BE/WebTicket/WebTicket/appsettings.Production.json
@@ -8,11 +8,9 @@
   "Jwt": {
     "Key": "RadRitSupperKey123!@#diconmekeyyeucaudaithe",
     "Issuer": "https://localhost:7113/",
-    "Audience": "https://localhost:7113/",
-    "ValidTime": 5,
-    "ValidTimeRF": 24
+    "Audience": "https://localhost:7113/"
   },
   "ConnectionStrings": {
-    "Core": "Server=localhost;Port=5432;Database=WebTicket;User Id=postgres;Password=123456;"
+    "Core": "Server=postgres;Port=5432;Database=WebTicket;User Id=postgres;Password=admin;"
   }
 }
