--- a/BE/WebTicket/WebTicket/appsettings.Production.json
+++ b/BE/WebTicket/WebTicket/appsettings.Production.json
@@ -8,9 +8,11 @@
   "Jwt": {
     "Key": "RadRitSupperKey123!@#diconmekeyyeucaudaithe",
     "Issuer": "https://localhost:7113/",
-    "Audience": "https://localhost:7113/"
+    "Audience": "https://localhost:7113/",
+    "ValidTime": 5,
+    "ValidTimeRF": 24
   },
   "ConnectionStrings": {
-    "Core": "Server=postgres;Port=5432;Database=WebTicket;User Id=postgres;Password=admin;"
+    "Core": "Server=postgres;Port=5432;Database=WebTicket;User Id=postgres;Password=123456;"
   }
 }
