--- a/BE/WebTicket/WebTicket/Dockerfile
+++ b/BE/WebTicket/WebTicket/Dockerfile
@@ -8,6 +8,8 @@ EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
+RUN dotnet dev-certs https --trust
+COPY --from=build /root/.dotnet/corefx/cryptography/x509stores/my/* /root/.dotnet/corefx/cryptography/x509stores/my/
 COPY ["WebTicket/WebTicket.csproj", "WebTicket/"]
 COPY ["Common/Common.csproj", "Common/"]
 COPY ["Repositories/Repositories.csproj", "Repositories/"]
