--- a/BE/WebTicket/docker-compose.yml
+++ b/BE/WebTicket/docker-compose.yml
@@ -8,6 +8,9 @@ services:
           - ASPNETCORE_URLS=https://+:443
         ports:
           - "44331:443"
+        volumes:
+          - /etc/ssl/certs:/etc/ssl/certs:ro
+          - /etc/ssl/private:/etc/ssl/private:ro
         depends_on:
             postgres:
                 condition: service_healthy
@@ -20,7 +23,7 @@ services:
         ports:
           - 5432:5432
         volumes:
-          - postgres-data:/data/db
+          - postgres-data:/var/lib/postgresql/data
         healthcheck:
           test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
           interval: 10s
