--- a/BE/WebTicket/WebTicket/appsettings.json
+++ b/BE/WebTicket/WebTicket/appsettings.json
@@ -5,16 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "Endpoints": {
-      "Https": {
-        "Url": "https://+:8443",
-        "Certificate": {
-          "Path": "/etc/ssl/certs/apache-selfsigned.crt",
-          "KeyPath": "/etc/ssl/private/apache-selfsigned.key"
-        }
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
