--- a/BE/WebTicket/docker-compose.yml
+++ b/BE/WebTicket/docker-compose.yml
@@ -4,8 +4,14 @@ services:
   api:
     container_name: webticket-api
     image: webticket-image:latest
+    build: 
+      args:
+      - PASSWORD_ENV_SEEDED=${PASSWORD_ENV_SEEDED}
     environment:
-      - ASPNETCORE_ENVIRONMENT=Production
+      - PASSWORD_ENV_SEEDED=some.long.password.fllkwefiwejf23049uwlekjf.sEFWEFGR98^&$
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=${PASSWORD_ENV_SEEDED}
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+      - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
       - "44331:443" # Map HTTPS port
