--- a/FE/src/package.json
+++ b/FE/src/package.json
@@ -8,20 +8,13 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
-    "@mui/x-date-pickers": "^7.22.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "date-fns": "^4.1.0",
-    "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-data-grid": "^7.0.0-beta.47",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
-    "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
   "scripts": {
