--- a/BE/WebTicket/WebTicket/appsettings.Production.json
+++ b/BE/WebTicket/WebTicket/appsettings.Production.json
@@ -13,6 +13,6 @@
     "ValidTimeRF": 24
   },
   "ConnectionStrings": {
-    "Core": "Server=postgres;Port=5432;Database=WebTicket;User Id=postgres;Password=admin;"
+    "Core": "Server=postgres;Port=5432;Database=WebTicket;User Id=postgres;Password=15102002;"
   }
 }
