--- a/BE/WebTicket/WebTicket/appsettings.Development.json
+++ b/BE/WebTicket/WebTicket/appsettings.Development.json
@@ -13,6 +13,6 @@
     "ValidTimeRF": 24
   },
   "ConnectionStrings": {
-    "Core": "Server=localhost;Port=5432;Database=WebTicket;User Id=postgres;Password=123456;"
+    "Core": "Server=localhost;Port=5432;Database=WebTicket;User Id=postgres;Password=15102002;"
   }
 }
