updatee nginx file

--- a/FE/nginx.conf
+++ b/FE/nginx.conf
@@ -9,7 +9,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy API requests to backend
+    # Proxy API requests to backend (strip /api prefix)
     location /api/ {
         proxy_pass http://backend:80/;
         proxy_set_header Host $host;
