try to fix nginx

--- a/FE/nginx.conf
+++ b/FE/nginx.conf
@@ -11,7 +11,7 @@ server {
 
     # Proxy API requests to backend (strip /api prefix)
     location /api/ {
-        proxy_pass http://backend:80/;
+        proxy_pass http://webticket-backend:80/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
