--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,31 @@
 name: webticket-fullstack
 
 services:
+  # Nginx Proxy
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - webticket-network
+
   # Frontend Service
   frontend:
-    container_name: webticket-frontend
+    container_name: frontend-app
     image: vinhdn20/webticket-frontend:latest
     build:
       context: ./FE
       dockerfile: Dockerfile
     environment:
-      - REACT_APP_API_URL=http://localhost:5000
-    ports:
-      - "3000:80"
+      - REACT_APP_API_URL=/api
+    # ports:
+    #   - "3000:80"
     depends_on:
       - backend
     networks:
@@ -19,7 +33,7 @@ services:
 
   # Backend API Service
   backend:
-    container_name: webticket-backend
+    container_name: backend-api
     image: vinhdn20/webticket-backend:latest
     build:
       context: ./BE/WebTicket
@@ -27,8 +41,8 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:80
-    ports:
-      - "5000:80"
+    # ports:
+    #   - "5000:80"
     depends_on:
       postgres:
         condition: service_healthy
