--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,9 +6,25 @@ upstream backend {
     server backend-api:80;
 }
 
+# HTTP redirect to HTTPS
 server {
     listen 80;
-    server_name localhost;
+    server_name travelmanage.io.vn;
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name travelmanage.io.vn;
+
+    # Cloudflare Origin Certificate
+    ssl_certificate /etc/ssl/certs/travelmanage.io.vn.pem;
+    ssl_certificate_key /etc/ssl/private/travelmanage.io.vn.pem.key;
+    
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512;
+    ssl_prefer_server_ciphers off;
 
     # Frontend - serve React app
     location / {
