--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,7 +15,8 @@ server {
 
 # HTTPS server
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name travelmanage.io.vn;
 
     # Cloudflare Origin Certificate
@@ -23,8 +24,6 @@ server {
     ssl_certificate_key /etc/ssl/private/travelmanage.io.vn.pem.key;
     
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512;
-    ssl_prefer_server_ciphers off;
 
     # Frontend - serve React app
     location / {
