--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -32,6 +32,18 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Handle client-side routing fallback
+        proxy_intercept_errors on;
+        error_page 404 = @fallback;
+    }
+    
+    location @fallback {
+        proxy_pass http://frontend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # API requests - proxy to backend
