--- a/FE/Dockerfile
+++ b/FE/Dockerfile
@@ -24,7 +24,8 @@ FROM nginx:alpine
 # Copy built application from build stage
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Use default nginx config (removed custom config)
+# Copy custom nginx config for SPA routing
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
