--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,14 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./ssl:/etc/ssl:ro
+    deploy:
+      resources:
+        limits:
+          cpus: '${NGINX_CPU_LIMIT:-0.2}'
+          memory: '${NGINX_MEMORY_LIMIT:-256m}'
+        reservations:
+          cpus: '0.05'
+          memory: 64m
     depends_on:
       - frontend
       - backend
@@ -28,6 +36,14 @@ services:
       - REACT_APP_API_URL=/api
     # ports:
     #   - "3000:80"
+    deploy:
+      resources:
+        limits:
+          cpus: '${FRONTEND_CPU_LIMIT:-0.5}'
+          memory: '${FRONTEND_MEMORY_LIMIT:-512m}'
+        reservations:
+          cpus: '0.1'
+          memory: 128m
     depends_on:
       - backend
     networks:
@@ -43,8 +59,18 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:80
+      - DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1
+      - DOTNET_EnableDiagnostics=0
     # ports:
     #   - "5000:80"
+    deploy:
+      resources:
+        limits:
+          cpus: '${BACKEND_CPU_LIMIT:-1.0}'
+          memory: '${BACKEND_MEMORY_LIMIT:-1g}'
+        reservations:
+          cpus: '0.2'
+          memory: 256m
     depends_on:
       postgres:
         condition: service_healthy
@@ -58,16 +84,31 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=webticket
+      - POSTGRES_DB=WebTicket
+      # PostgreSQL performance tuning
+      - POSTGRES_SHARED_BUFFERS=128MB
+      - POSTGRES_EFFECTIVE_CACHE_SIZE=512MB
+      - POSTGRES_MAINTENANCE_WORK_MEM=64MB
+      - POSTGRES_CHECKPOINT_COMPLETION_TARGET=0.9
+      - POSTGRES_WAL_BUFFERS=16MB
     ports:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    deploy:
+      resources:
+        limits:
+          cpus: '${POSTGRES_CPU_LIMIT:-0.5}'
+          memory: '${POSTGRES_MEMORY_LIMIT:-512m}'
+        reservations:
+          cpus: '0.1'
+          memory: 128m
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     networks:
       - webticket-network
 
