--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,11 @@
 upstream frontend {
     server frontend-app:80;
+    keepalive 32;
 }
 
 upstream backend {
     server backend-api:80;
+    keepalive 32;
 }
 
 # HTTP redirect to HTTPS
@@ -32,6 +34,15 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        
+        # Caching for static assets
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+            proxy_pass http://frontend;
+            proxy_cache_valid 200 1d;
+            add_header Cache-Control "public, max-age=86400";
+        }
         
         # Handle client-side routing fallback
         proxy_intercept_errors on;
