--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,7 @@ services:
     # ports:
     #   - "5000:80"
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
     networks:
       - webticket-network
 
@@ -61,22 +60,29 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=WebTicket
-      # PostgreSQL performance tuning
+      - POSTGRES_SHARED_PRELOAD_LIBRARIES=
+      - POSTGRES_MAX_CONNECTIONS=50
       - POSTGRES_SHARED_BUFFERS=128MB
-      - POSTGRES_EFFECTIVE_CACHE_SIZE=512MB
-      - POSTGRES_MAINTENANCE_WORK_MEM=64MB
-      - POSTGRES_CHECKPOINT_COMPLETION_TARGET=0.9
-      - POSTGRES_WAL_BUFFERS=16MB
+      - POSTGRES_EFFECTIVE_CACHE_SIZE=256MB
+      - POSTGRES_WORK_MEM=4MB
     ports:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '1'
+        reservations:
+          memory: 256M
+          cpus: '0.5'
+    # healthcheck:
+    #   test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
+    #   interval: 45s
+    #   timeout: 15s
+    #   retries: 5
+    #   start_period: 60s
     networks:
       - webticket-network
 
