add lại health check

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,9 @@ services:
     # ports:
     #   - "5000:80"
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
     networks:
       - webticket-network
 
@@ -77,12 +79,12 @@ services:
         reservations:
           memory: 256M
           cpus: '0.5'
-    # healthcheck:
-    #   test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
-    #   interval: 45s
-    #   timeout: 15s
-    #   retries: 5
-    #   start_period: 60s
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
     networks:
       - webticket-network
 
